src/containers/App/styles.scss
@import '~globals.scss';

html {
  font-size: 10px;
}

body, .app {
  position: fixed;
  font-family: $brandFont;
  width: 100%;
  height: 100%;
  overflow-y: scroll;
}

.viewContent {
    margin-top: 60px;

    transition: transform .3s ease-in-out,margin .3s ease-in-out;
}

.viewContentFull {
    margin-left: 260px;
}

.viewContentCollapsed {
    margin-left: 60px;
}

